refactor: remove OutpuBlock and ExtendedParseResult; replace with redact() method